Controller Pattern refactor

--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
             <h4>Settings</h4>
             <div id="vizTypeSwitchMount"></div>
             <div id="vizOverlaySwitchMount"></div>
+            <div id="pauseWhileDrawingSwitchMount"></div>
         </div>
 
         <div id="historyPopout" class="popout-panel hidden">
