cycle detection indicators

--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
             <h4>Settings</h4>
             <div id="vizTypeSwitchMount"></div>
             <div id="vizOverlaySwitchMount"></div>
+            <div id="vizCycleIndicatorSwitchMount" style="margin-top: 5px;"></div>
             <div id="pauseWhileDrawingSwitchMount" style="margin-top: 10px;"></div>
         </div>
 
