new shortcuts and fabs

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
             <div class="popout-separator"></div>
             <div class="form-group-buttons">
                 <button id="triggerMutationButton" class="button">Mutate</button>
+                <button id="cloneButton" class="button">Clone</button>
                 <button id="cloneAndMutateButton" class="button">Clone & Mutate Others</button>
             </div>
         </div>
