UI consolidation Stage 1 fixed

--- a/index.html
+++ b/index.html
@@ -178,14 +178,7 @@
             </div>
         </div>
         <div id="setHexPopout" class="popout-panel hidden" data-tour-id="set-hex-popout">
-            <h4>Set/Copy Ruleset Hex<button class="button-help-trigger" data-tour-name="directInput" title="Help with this feature">[?]</button></h4>
-            <div class="form-group">
-                <input type="text" id="rulesetInputPopout" class="hex-input" placeholder="32 hex chars" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
-            </div>
-            <div class="form-group-buttons">
-                <button id="setRuleFromPopoutButton" class="button" data-tour-id="set-rule-from-popout-button">Set</button>
-                <button id="copyRuleFromPopoutButton" class="button">Copy Current</button>
-            </div>
+            <!-- Content will be populated by RulesetDirectInput component -->
         </div>
         <div id="resetClearPopout" class="popout-panel hidden" data-tour-id="reset-clear-popout">
             <h4>Reset / Clear<button class="button-help-trigger" data-tour-name="resetClear" title="Help with this feature">[?]</button></h4>
