UI Refactor Checkpoint 3

--- a/index.html
+++ b/index.html
@@ -230,8 +230,7 @@
             <button class="close-panel-button" title="Close Panel">&times;</button>
             <h3 id="learningPanelTitle">Learning Hub</h3>
             <div class="panel-content-area">
-                <p class="editor-text info-text" style="text-align: left;">Replay any tutorial to learn more about the explorer's features. Your progress is saved automatically.</p>
-                <ul id="desktop-tour-list" class="learning-center-list"></ul>
+                <!-- This will be populated by LearningComponent -->
             </div>
         </div>
         
