--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </div>
         <div id="learningPanel" class="draggable-panel-base hidden" role="dialog" aria-labelledby="learningPanelTitle" aria-modal="true">
             <button class="close-panel-button" title="Close Panel">&times;</button>
-            <h3 id="learningPanelTitle">Learning Hub</h3>
+            <h3 id="learningPanelTitle">Learning Hub (Alpha)</h3>
             <div class="panel-content-area">
                 <!-- This will be populated by LearningComponent -->
             </div>
