Save Share Delete Rulesets, private library

--- a/index.html
+++ b/index.html
@@ -238,6 +238,9 @@
     
     <input type="file" id="fileInput" accept=".txt,.json" style="display: none;" aria-label="Load file">
     <div id="mobile-views-container"></div>
+    <div id="modal-container"></div>
+    <div id="popover-container"></div>
+    <div id="dialog-container"></div>
     <script type="module" src="src/main.js"></script>
 </body>
 
