Refactor ruleset display in TopInfoBar to enhance visualization and save functionality. Introduced a new layout for ruleset name and code, added save button, and improved event handling for saving rulesets. Updated CSS for better styling and responsiveness.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,12 @@
                     <button id="undoButton" class="button-icon" title="Undo Ruleset Change (Ctrl+Z)" disabled>↶</button>
                     <button id="redoButton" class="button-icon" title="Redo Ruleset Change (Ctrl+Y)" disabled>↷</button>
                 </div>
-                <code id="rulesetDisplay">N/A</code>
+                <span class="ruleset-viz-container"></span>
+                <div id="rulesetDisplay" class="ruleset-display-toggle">
+                    <span id="rulesetDisplayName"></span>
+                    <code id="rulesetDisplayCode">N/A</code>
+                </div>
+                <button id="saveRulesetButton" class="button-icon save-ruleset-button" data-tour-id="save-ruleset-button" title="Save this ruleset to your personal library">⭐</button>
                 <div class="ruleset-history-controls">
                     <button id="historyButton" class="button-icon" title="View Ruleset History">🕒</button>
                 </div>
