--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
     <div id="modal-container"></div>
     <div id="popover-container"></div>
     <div id="dialog-container"></div>
+    <div id="toast-container"></div>
     <!-- Vite will inject the script tag here during build -->
     <script type="module" src="/src/main.js"></script>
 </body>
